--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,6 @@ env:
 before_install:
 
     # reinstall docker-compose at specific version
-    - sudo rm -f /usr/local/bin/docker-compose
-    - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-    - chmod +x docker-compose
-    - sudo mv docker-compose /usr/local/bin
-
+    - sudo apt install docker-compose
 script:
     - docker version
