--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,8 @@
-sudo: required
-services:
-  - docker
-env: 
-    global:
-        - DOCKER_VERSION=1.10.1-0~trusty
-        - DOCKER_COMPOSE_VERSION=1.6.0
+env:
+  - DOCKER_COMPOSE_VERSION=1.4.2
 
 before_install:
-
-    # reinstall docker-compose at specific version
-    - sudo apt install docker-compose
-script:
-    - docker version
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
