--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
+sudo: required
+language: go
+services:
+  - docker
 env:
-  # You may want to update this to whatever the latest version is, or keep it
-  # the same as your local machines. However, I have only tested it with 1.8.0+.
-  # There should be a time in the future when this is not necessary - it is
-  # explained in more detail below.
+
   DOCKER_COMPOSE_VERSION: 1.8.0
 
 before_install:
-  # update is required to update the repositories to see the new packages for
-  # Docker.
   - sudo apt-get update
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
